Archive2/28/fa6c71ff876aca/output
main.cpp:2:5: error: missing terminating " character
 asm("movl $1,%%eax;
     ^
main.cpp:2:1: error: missing terminating " character
 asm("movl $1,%%eax;
 ^
main.cpp:4:16: error: missing terminating " character
      int  $0x80"
                ^
main.cpp:4:6: error: missing terminating " character
      int  $0x80"
      ^
main.cpp:3:6: error: expected string-literal before 'xorl'
      xorl %%ebx,%%ebx;
      ^
main.cpp:3:22: error: extra ';' [-Wpedantic]
      xorl %%ebx,%%ebx;
                      ^
main.cpp:5:5: error: expected initializer before ')' token
     );
     ^
